# rust_bit_manipulation_lib

./: Cargo.toml  README.md  readme.md
src/: lib.rs
