[package]
authors = ["Dieriba <dieriba.pro@gmail.com>"]
name = "bit_manipulation"
version = "0.2.0"
edition = "2021"
description = "bit_manipulation: A lightweight Rust crate for seamless management and validation of up to 128 option states. Empower your applications with efficient, flexible, and intuitive option handling, ensuring smooth activation checks and manipulation."
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
